<resources>
    <string name="app_name">ProDocs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobileLabel">شماره موبایل</string>
    <string name="mobileHint">شماره موبایل خود را وارد کنید</string>
    <string name="mobileAgentHint">شماره موبایل پذیرنده را وارد کنید</string>
    <string name="contractLabel">شماره قرارداد</string>
    <string name="contractHint">شماره قرارداد خود را وارد کنید</string>
    <string name="usernameLabel">نام کاربری</string>
    <string name="usernameHint">نام کاربری خود را وارد کنید</string>
    <string name="passwordLabel">رمز عبور</string>
    <string name="passwordHint">رمز عبور خود را وارد کنید</string>
    <string name="identityCodeLabel">کدملی</string>
    <string name="identityCodeHint">کدملی پذیرنده را وارد کنید</string>
    <string name="nameLabel">نام</string>
    <string name="nameHint">نام پذیرنده را وارد کنید</string>
    <string name="lastNameLabel">نام خانوادگی</string>
    <string name="lastNameHint">نام خانوادگی پذیرنده را وارد کنید</string>
    <string name="login_btn">ورود</string>
    <string name="exit_app">برای خروج دوباره بازگشت را بزنید</string>
    <string name="title_activity_upload">UploadActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>