<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    style="@style/LoginCard"
    tools:context=".controller.login.UserLoginFragment"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="25dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile"
            style="@style/TextField"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:elevation="50dp"
            android:hint="@string/mobileLabel"
            app:placeholderText="@string/mobileHint">

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="15sp"
                android:maxLines="1"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contract_number"
            style="@style/TextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/contractLabel"
            android:elevation="50dp"
            app:placeholderText="@string/contractHint">

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="15sp"
                android:maxLines="1"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/login"
            style="@style/ProgressButton"
            android:layout_margin="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>