<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:elevation="30dp"
    app:cardCornerRadius="15dp"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/mobileLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contract_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/contractLabel"
            app:placeholderText="@string/contractHint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/login"
            style="@style/ProgressButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:textSize="14dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>