<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="20dp"
    tools:context=".controller.main.UserRegistrationFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/pspName"
            android:text="ایران کیش"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="نام شرکت پرداخت:"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="right"
            android:textSize="17dp"
            android:fontFamily="@font/iran_yekan_black"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/agentName"
            android:text="نگین تمدن"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="نام نماینده:"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="right"
            android:textSize="17dp"
            android:fontFamily="@font/iran_yekan_black"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/type"
            android:text="هدایت تراکنش"
            android:gravity="right"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="نوع همکاری:"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_width="0dp"
            android:textSize="17dp"
            android:layout_gravity="right"
            android:fontFamily="@font/iran_yekan_black"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:text="حقوقی"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:text="حقیقی"
                    android:checked="true"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="نوع پذیرنده"
                    android:gravity="right"
                    android:layout_marginLeft="70dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile"
                style="@style/TextField"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:elevation="50dp"
                android:hint="@string/mobileLabel"
                app:placeholderText="@string/mobileAgentHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/identityCode"
                style="@style/TextField"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:elevation="50dp"
                android:hint="@string/identityCodeLabel"
                app:placeholderText="@string/identityCodeHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/TextField"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:elevation="50dp"
                android:hint="@string/nameLabel"
                app:placeholderText="@string/nameHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastName"
                style="@style/TextField"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:elevation="50dp"
                android:hint="@string/lastNameLabel"
                app:placeholderText="@string/lastNameHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnNext"
                style="@style/ProgressButton"
                android:text="بعدی"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>